--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@vimeo/player": "^2.20.1",
     "aos": "^2.3.4",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.0",
@@ -16,6 +17,7 @@
     "react-hot-toast": "^2.4.1",
     "react-i18next": "^13.0.2",
     "react-icons": "^4.9.0",
+    "react-player": "^2.13.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
