--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-player": "^2.13.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.12.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
+    "sweetalert-react": "^0.4.11",
+    "sweetalert2": "^11.6.13",
     "swiper": "^9.4.1",
     "web-vitals": "^2.1.4"
   },
