--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -19,8 +20,10 @@
     "react-icons": "^4.9.0",
     "react-player": "^2.13.0",
     "react-query": "^3.39.3",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.12.1",
     "react-scripts": "^5.0.1",
+    "redux": "^4.2.1",
     "sweetalert-react": "^0.4.11",
     "sweetalert2": "^11.6.13",
     "swiper": "^10.3.1",
