--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-hot-toast": "^2.4.1",
     "react-i18next": "^13.0.2",
     "react-icons": "^4.9.0",
+    "react-lottie": "^1.2.3",
     "react-player": "^2.13.0",
     "react-query": "^3.39.3",
     "react-redux": "^8.1.3",
