--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.5.0",
     "bootstrap": "^5.3.0",
     "i18next-browser-languagedetector": "^7.1.0",
+    "otp-generator": "^4.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
@@ -19,6 +20,7 @@
     "react-i18next": "^13.0.2",
     "react-icons": "^4.9.0",
     "react-lottie": "^1.2.3",
+    "react-otp-input": "^3.1.0",
     "react-player": "^2.13.0",
     "react-query": "^3.39.3",
     "react-redux": "^8.1.3",
